test_linux/t04/exp2.txt
Reading from file f2.der...
000000  30                           00 1 10000
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     1 -> Constructed
                                          ^^^^^ Tag number:  16 -> SEQUENCE
000001  81 0c                        1 0000001
                                     ^          Len type: 1 -> MULTI BYTES
                                       ^^^^^^^  Len nb bytes: 1, value: 12
000003  30                           00 1 10000
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     1 -> Constructed
                                          ^^^^^ Tag number:  16 -> SEQUENCE
000004  00                           0 0000000
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 0
000005  02                           00 0 00010
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     0 -> Primitive
                                          ^^^^^ Tag number:   2 -> INTEGER
000006  09                           0 0001001
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 9
000007  05 06 07 08    09 0a 0b 0c   ....  .... 
00000f  0d                           .          
Error: inconsistent items length, position: 16
